--- a/src/Microsoft.Net.Http.Client/Project.json
+++ b/src/Microsoft.Net.Http.Client/Project.json
@@ -1,14 +1,17 @@
 {
   "version": "0.1-alpha-*",
   "dependencies": {
-          "Microsoft.Net.Security" : "",
-          "System.Net.Http" : ""
+        "Microsoft.Net.Security" : ""
   },
   "compilationOptions": {
     "allowUnsafe": true
   },
   "configurations": {
-    "net45": {}/*,
+    "net45": {
+      "dependencies": {
+        "System.Net.Http" : ""
+      }
+    }/*,
     "k10": {
       "dependencies": {
         "Microsoft.Win32.Primitives": "4.0.0.0",
@@ -23,6 +26,7 @@
         "System.IO.FileSystem.Primitives": "4.0.20.0",
         "System.Linq": "4.0.0.0",
         "System.Net.Primitives": "4.0.10.0",
+        "System.Net.Http" : "4.0.0.0",
         "System.Reflection": "4.0.10.0",
         "System.Resources.ResourceManager": "4.0.0.0",
         "System.Runtime": "4.0.20.0",
