--- a/samples/TestClient/Project.json
+++ b/samples/TestClient/Project.json
@@ -5,6 +5,12 @@
         "System.Net.Http" : ""
     },
     "configurations": {
-        "net45": { }
+        "net45": { },
+        "k10": {
+            "dependencies": {
+                "System.Console": "4.0.0.0",
+                "System.Runtime": "4.0.20.0"
+            }
+        }
     }
 }
