--- a/src/Microsoft.Net.Http.Client/Project.json
+++ b/src/Microsoft.Net.Http.Client/Project.json
@@ -11,7 +11,7 @@
       "dependencies": {
         "System.Net.Http" : ""
       }
-    }/*,
+    },
     "k10": {
       "dependencies": {
         "Microsoft.Win32.Primitives": "4.0.0.0",
@@ -27,6 +27,7 @@
         "System.Linq": "4.0.0.0",
         "System.Net.Primitives": "4.0.10.0",
         "System.Net.Http" : "4.0.0.0",
+        "System.Net.Sockets": "4.0.0.0",
         "System.Reflection": "4.0.10.0",
         "System.Resources.ResourceManager": "4.0.0.0",
         "System.Runtime": "4.0.20.0",
@@ -42,6 +43,6 @@
         "System.Threading.Tasks": "4.0.10.0",
         "System.Threading.ThreadPool": "4.0.10.0"
       }
-    }*/
+    }
   }
 }
