Renamed configurations to frameworks in project.json

--- a/samples/TestClient/project.json
+++ b/samples/TestClient/project.json
@@ -3,7 +3,7 @@
         "Microsoft.Net.Http.Client" : "",
         "System.Net.Http" : ""
     },
-    "configurations": {
+    "frameworks": {
         "net45": { },
         "k10": {
             "dependencies": {
