Updated to use the new target framework in project.json

--- a/src/Microsoft.Net.Http.Client/project.json
+++ b/src/Microsoft.Net.Http.Client/project.json
@@ -12,7 +12,7 @@
         "System.Net.Http" : ""
       }
     },
-    "k10": {
+    "aspnetcore50": {
       "dependencies": {
         "Microsoft.Win32.Primitives": "4.0.0.0",
         "System.Collections": "4.0.10.0",
