--- a/samples/TestClient/project.json
+++ b/samples/TestClient/project.json
@@ -1,14 +1,18 @@
 {
     "dependencies": {
-        "Microsoft.Net.Http.Client" : "",
-        "System.Net.Http" : ""
+        "Microsoft.Net.Http.Client": "1.0.0-*"
     },
     "frameworks": {
-        "net45": { },
+        "net45": {
+            "frameworkAssemblies": {
+                "System.Net.Http": "4.0.0.0"
+            }
+        },
         "aspnetcore50": {
             "dependencies": {
-                "System.Console": "4.0.0.0",
-                "System.Runtime": "4.0.20.0"
+                "System.Console": "4.0.0-beta-*",
+                "System.Net.Http": "4.0.0-beta-*",
+                "System.Runtime": "4.0.20-beta-*"
             }
         }
     }
