--- a/src/Microsoft.Net.Http.Client/project.json
+++ b/src/Microsoft.Net.Http.Client/project.json
@@ -1,47 +1,47 @@
 {
-  "version": "1.0.0-*",
-  "dependencies": {
-        "Microsoft.Net.Security" : ""
-  },
-  "compilationOptions": {
-    "allowUnsafe": true
-  },
-  "frameworks": {
-    "net45": {
-      "dependencies": {
-        "System.Net.Http" : ""
-      }
+    "version": "1.0.0-*",
+    "dependencies": {
+        "Microsoft.Net.Security": "1.0.0-*"
     },
-    "aspnetcore50": {
-      "dependencies": {
-        "Microsoft.Win32.Primitives": "4.0.0.0",
-        "System.Collections": "4.0.10.0",
-        "System.Collections.Concurrent": "4.0.0.0",
-        "System.Diagnostics.Contracts": "4.0.0.0",
-        "System.Diagnostics.Debug": "4.0.10.0",
-        "System.Diagnostics.Tools": "4.0.0.0",
-        "System.Globalization": "4.0.10.0",
-        "System.IO": "4.0.0.0",
-        "System.IO.FileSystem": "4.0.0.0",
-        "System.Linq": "4.0.0.0",
-        "System.Net.Primitives": "4.0.10.0",
-        "System.Net.Http" : "4.0.0.0",
-        "System.Net.Sockets": "4.0.0.0",
-        "System.Reflection": "4.0.10.0",
-        "System.Resources.ResourceManager": "4.0.0.0",
-        "System.Runtime": "4.0.20.0",
-        "System.Runtime.Extensions": "4.0.10.0",
-        "System.Runtime.Handles":  "4.0.0.0",
-        "System.Runtime.InteropServices": "4.0.20.0",
-        "System.Security.Cryptography.X509Certificates": "4.0.0.0",
-        "System.Security.Principal": "4.0.0.0",
-        "System.Text.Encoding": "4.0.10.0",
-        "System.Text.Encoding.Extensions": "4.0.10.0",
-        "System.Threading": "4.0.0.0",
-        "System.Threading.Overlapped": "4.0.0.0",
-        "System.Threading.Tasks": "4.0.10.0",
-        "System.Threading.ThreadPool": "4.0.10.0"
-      }
+    "compilationOptions": {
+        "allowUnsafe": true
+    },
+    "frameworks": {
+        "net45": {
+            "frameworkAssemblies": {
+                "System.Net.Http": "4.0.0.0"
+            }
+        },
+        "aspnetcore50": {
+            "dependencies": {
+                "Microsoft.Win32.Primitives": "4.0.0-beta-*",
+                "System.Collections": "4.0.10-beta-*",
+                "System.Collections.Concurrent": "4.0.0-beta-*",
+                "System.Diagnostics.Contracts": "4.0.0-beta-*",
+                "System.Diagnostics.Debug": "4.0.10-beta-*",
+                "System.Diagnostics.Tools": "4.0.0-beta-*",
+                "System.Globalization": "4.0.10",
+                "System.IO": "4.0.0-beta-*",
+                "System.IO.FileSystem": "4.0.0-beta-*",
+                "System.Linq": "4.0.0-beta-*",
+                "System.Net.Primitives": "4.0.10-beta-*",
+                "System.Net.Http": "4.0.0-beta-*",
+                "System.Net.Sockets": "4.0.0-beta-*",
+                "System.Reflection": "4.0.10-beta-*",
+                "System.Resources.ResourceManager": "4.0.0-beta-*",
+                "System.Runtime": "4.0.20-beta-*",
+                "System.Runtime.Extensions": "4.0.10-beta-*",
+                "System.Runtime.Handles": "4.0.0-beta-*",
+                "System.Runtime.InteropServices": "4.0.20-beta-*",
+                "System.Security.Cryptography.X509Certificates": "4.0.0-beta-*",
+                "System.Security.Principal": "4.0.0-beta-*",
+                "System.Text.Encoding": "4.0.10-beta-*",
+                "System.Text.Encoding.Extensions": "4.0.10-beta-*",
+                "System.Threading": "4.0.0-beta-*",
+                "System.Threading.Overlapped": "4.0.0-beta-*",
+                "System.Threading.Tasks": "4.0.10-beta-*",
+                "System.Threading.ThreadPool": "4.0.10-beta-*"
+            }
+        }
     }
-  }
-}
+    }
