--- a/src/Microsoft.Net.Http.Client/project.json
+++ b/src/Microsoft.Net.Http.Client/project.json
@@ -7,9 +7,9 @@
         "allowUnsafe": true
     },
     "frameworks": {
-        "net45": {
+        "aspnet50": {
             "frameworkAssemblies": {
-                "System.Net.Http": "4.0.0.0"
+                "System.Net.Http": ""
             }
         },
         "aspnetcore50": {
