--- a/src/Microsoft.Net.Http.Client/project.json
+++ b/src/Microsoft.Net.Http.Client/project.json
@@ -7,6 +7,11 @@
         "allowUnsafe": true
     },
     "frameworks": {
+        "net45": {
+            "frameworkAssemblies": {
+                "System.Net.Http": ""
+            }
+        },
         "aspnet50": {
             "frameworkAssemblies": {
                 "System.Net.Http": ""
