--- a/samples/TestClient/project.json
+++ b/samples/TestClient/project.json
@@ -1,24 +1,25 @@
 {
-    "dependencies": {
-        "Microsoft.Net.Http.Client": "1.0.0-*"
+  "dependencies": {
+    "Microsoft.Net.Http.Client": "1.0.0-*"
+  },
+  "frameworks": {
+    "net45": {
+      "frameworkAssemblies": {
+        "System.Net.Http": ""
+      }
     },
-    "frameworks": {
-        "net45": {
-            "frameworkAssemblies": {
-                "System.Net.Http": ""
-            }
-        },
-        "aspnet50": {
-            "frameworkAssemblies": {
-                "System.Net.Http": ""
-            }
-        },
-        "aspnetcore50": {
-            "dependencies": {
-                "System.Console": "4.0.0-beta-*",
-                "System.Net.Http": "4.0.0-beta-*",
-                "System.Runtime": "4.0.20-beta-*"
-            }
-        }
+    "aspnet50": {
+      "frameworkAssemblies": {
+        "System.Net.Http": ""
+      }
+    },
+    "aspnetcore50": {
+      "dependencies": {
+        "System.Console": "4.0.0-beta-*",
+        "System.Net.Http": "4.0.0-beta-*",
+        "System.Runtime": "4.0.20-beta-*"
+      }
     }
+  },
+  "webroot": null
 }
