--- a/src/Microsoft.Net.Http.Client/project.json
+++ b/src/Microsoft.Net.Http.Client/project.json
@@ -1,52 +1,52 @@
 {
-    "version": "1.0.0-*",
-    "dependencies": {
-        "Microsoft.Net.Security": "1.0.0-*"
+  "version": "1.0.0-*",
+  "dependencies": {},
+  "compilationOptions": {
+    "allowUnsafe": true
+  },
+  "frameworks": {
+    "net45": {
+      "frameworkAssemblies": {
+        "System.Net.Http": ""
+      }
     },
-    "compilationOptions": {
-        "allowUnsafe": true
+    "aspnet50": {
+      "frameworkAssemblies": {
+        "System.Net.Http": ""
+      }
     },
-    "frameworks": {
-        "net45": {
-            "frameworkAssemblies": {
-                "System.Net.Http": ""
-            }
-        },
-        "aspnet50": {
-            "frameworkAssemblies": {
-                "System.Net.Http": ""
-            }
-        },
-        "aspnetcore50": {
-            "dependencies": {
-                "Microsoft.Win32.Primitives": "4.0.0-beta-*",
-                "System.Collections": "4.0.10-beta-*",
-                "System.Collections.Concurrent": "4.0.0-beta-*",
-                "System.Diagnostics.Contracts": "4.0.0-beta-*",
-                "System.Diagnostics.Debug": "4.0.10-beta-*",
-                "System.Diagnostics.Tools": "4.0.0-beta-*",
-                "System.Globalization": "4.0.10-beta-*",
-                "System.IO": "4.0.0-beta-*",
-                "System.IO.FileSystem": "4.0.0-beta-*",
-                "System.Linq": "4.0.0-beta-*",
-                "System.Net.Primitives": "4.0.10-beta-*",
-                "System.Net.Http": "4.0.0-beta-*",
-                "System.Net.Sockets": "4.0.0-beta-*",
-                "System.Reflection": "4.0.10-beta-*",
-                "System.Resources.ResourceManager": "4.0.0-beta-*",
-                "System.Runtime": "4.0.20-beta-*",
-                "System.Runtime.Extensions": "4.0.10-beta-*",
-                "System.Runtime.Handles": "4.0.0-beta-*",
-                "System.Runtime.InteropServices": "4.0.20-beta-*",
-                "System.Security.Cryptography.X509Certificates": "4.0.0-beta-*",
-                "System.Security.Principal": "4.0.0-beta-*",
-                "System.Text.Encoding": "4.0.10-beta-*",
-                "System.Text.Encoding.Extensions": "4.0.10-beta-*",
-                "System.Threading": "4.0.0-beta-*",
-                "System.Threading.Overlapped": "4.0.0-beta-*",
-                "System.Threading.Tasks": "4.0.10-beta-*",
-                "System.Threading.ThreadPool": "4.0.10-beta-*"
-            }
-        }
+    "aspnetcore50": {
+      "dependencies": {
+        "Microsoft.Win32.Primitives": "4.0.0-beta-*",
+        "System.Collections": "4.0.10-beta-*",
+        "System.Collections.Concurrent": "4.0.0-beta-*",
+        "System.Diagnostics.Contracts": "4.0.0-beta-*",
+        "System.Diagnostics.Debug": "4.0.10-beta-*",
+        "System.Diagnostics.Tools": "4.0.0-beta-*",
+        "System.Globalization": "4.0.10-beta-*",
+        "System.IO": "4.0.0-beta-*",
+        "System.IO.FileSystem": "4.0.0-beta-*",
+        "System.Linq": "4.0.0-beta-*",
+        "System.Net.Primitives": "4.0.10-beta-*",
+        "System.Net.Http": "4.0.0-beta-*",
+        "System.Net.Sockets": "4.0.0-beta-*",
+        "System.Net.Security": "4.0.0-beta-*",
+        "System.Reflection": "4.0.10-beta-*",
+        "System.Resources.ResourceManager": "4.0.0-beta-*",
+        "System.Runtime": "4.0.20-beta-*",
+        "System.Runtime.Extensions": "4.0.10-beta-*",
+        "System.Runtime.Handles": "4.0.0-beta-*",
+        "System.Runtime.InteropServices": "4.0.20-beta-*",
+        "System.Security.Cryptography.X509Certificates": "4.0.0-beta-*",
+        "System.Security.Principal": "4.0.0-beta-*",
+        "System.Text.Encoding": "4.0.10-beta-*",
+        "System.Text.Encoding.Extensions": "4.0.10-beta-*",
+        "System.Threading": "4.0.0-beta-*",
+        "System.Threading.Overlapped": "4.0.0-beta-*",
+        "System.Threading.Tasks": "4.0.10-beta-*",
+        "System.Threading.ThreadPool": "4.0.10-beta-*"
+      }
     }
-    }
+  },
+  "webroot": null
+}
